Update core_java.md